# itchy-graphs

./: README.md
downloader/: .gitignore  itch_downloader.py  itch_lib.py  requirements.txt
graph_generator/: CMakeLists.txt  commenters.cpp  commenters.h  make_graph.cpp
